# hms-assist-api

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build_and_install.sh  hms-assist.service  init_database.sql
.github/workflows/: docker-publish.yml
config/: config.yaml.example
docs/: ARTICLE_MULTI_COMMAND_VOICE.md  HMS_ASSIST_IMPLEMENTATION.md  HMS_ASSIST_QUICKREF.md  LINKEDIN_POST.md  PATIO_LIGHTS_ASSIST_SETUP.md
include/api/: CommandController.h
include/clients/: HomeAssistantClient.h  MqttClient.h  OllamaClient.h
include/intent/: DeterministicClassifier.h  EmbeddingClassifier.h  IntentClassifier.h  LLMClassifier.h
include/services/: DatabaseService.h  EntityIngestService.h  VectorSearchService.h  VoiceService.h
include/utils/: ConfigManager.h
src/: main.cpp
src/api/: CommandController.cpp
src/clients/: HomeAssistantClient.cpp  MqttClient.cpp  OllamaClient.cpp
src/intent/: DeterministicClassifier.cpp  EmbeddingClassifier.cpp  LLMClassifier.cpp
src/services/: DatabaseService.cpp  EntityIngestService.cpp  VectorSearchService.cpp  VoiceService.cpp
src/utils/: ConfigManager.cpp
tests/e2e/: test_api_e2e.py  test_sync_e2e.py
tests/unit/: test_command_controller.cpp  test_config_manager.cpp  test_database_service.cpp  test_deterministic_classifier.cpp  test_embedding_classifier.cpp  test_llm_classifier.cpp  test_vector_search_service.cpp
tools/: hms-assist-sync.service  hms_assist_sync.py
tools/tests/: test_hms_assist_sync.py
